--- a/web-react/src/Front-end/Login_and_Help.css
+++ b/web-react/src/Front-end/Login_and_Help.css
@@ -1,29 +1,31 @@
 nav {
-    text-align: right;
-    background-color: rgb(233, 233, 233);
-  }
-  
+position: sticky;
+top: 0;
+text-align: right;
+background-color: rgb(233, 233, 233);
+}
+
 nav ul {
-  list-style: none;
-  margin: 0px;
+list-style: none;
+margin: 0px;
 }
 
 nav li {
-  display: inline-block;
-  margin:10px;
+display: inline-block;
+margin:10px;
 }
 
 nav li a {
-  color: #000000;
-  font-size: 16px;
-  text-decoration: none;
-  padding: 5px 10px;
-  border-radius: 5px;
-  transition: all 0.3s ease;
+color: #000000;
+font-size: 16px;
+text-decoration: none;
+padding: 5px 10px;
+border-radius: 5px;
+transition: all 0.3s ease;
 }
 
 nav li a:hover {
-  background-color: #959595;
-  color: #fff;
+background-color: #959595;
+color: #fff;
 }
   
