--- a/web-react/src/Front-end/Front.css
+++ b/web-react/src/Front-end/Front.css
@@ -1,30 +1,33 @@
 .container {
+    max-width: 1500px;
     text-align: center;
-    background-color: rgb(255, 255, 255);
+    margin: auto;
 }
 .promotion {
     width: auto;
     max-width: 100%;
-    /* padding-top:5px ; */
   }
 
-.container ul {
-    max-width: 100%;
-    /* background-color: rgb(154, 3, 3); */
-    list-style: none;
-    margin: 0;
-    padding: 0;
-}
-
-.container li {
+  .container li {
     display: inline-block;
     margin: 0 10px;
-}
-
-.logo {
-    width: auto;
-    max-width: 120px;
+  }
+  
+  .logo {
+    min-height: 20px;
+    height: auto;
+    max-height: 60px;
     text-decoration: none;
-    padding: 20px 20px;
-    transition: all 0.3s ease;
-}
+  }
+
+  .BoxBrand{
+    height: 100px;
+    max-height: 80px;
+    margin-bottom: 4px;
+    background-color: #b8ad93;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  
