--- a/web-react/src/Front-end/Login_and_Help.css
+++ b/web-react/src/Front-end/Login_and_Help.css
@@ -2,7 +2,7 @@ nav {
 position: sticky;
 top: 0;
 text-align: right;
-background-color: rgb(233, 233, 233);
+background-color: #B8AD93;
 }
 
 nav ul {
@@ -25,7 +25,6 @@ transition: all 0.3s ease;
 }
 
 nav li a:hover {
-background-color: #959595;
-color: #fff;
+background-color: #d3cab6;
 }
   
