--- a/web-react/src/Front-end/Profile.css
+++ b/web-react/src/Front-end/Profile.css
@@ -1,30 +1,89 @@
-.container{
-    margin: auto;
-    max-width: 1800px;
-    text-align: center;
-    background-color: rgb(255, 255, 255);
-    
-}
-.BoxImg{
-    position: relative;
-}
-.Banner {
-    width: auto;
-    max-width: 100%;
-    max-height: 400px;
-    background-size: cover;
-    background-position: center;
-}
-.PF {
-    width: auto;
-    max-width: 100%;
-    max-height: 100px;
-    position: absolute;
-    border-radius: 50%;
-    bottom: 0;
-    left: 0;
-    margin-bottom: 20px; 
-    margin-left: 20px; 
-    background-size: cover;
-    background-position: center;
-}
+  .bannerProfile img{
+    max-height: 150px;
+    width: 100%;
+    object-fit: cover;
+  }
+  .profile {
+    display: flex;
+    flex-direction: column;
+    padding: 30px;
+    width: 80%;
+    max-width: 300px;
+    margin:auto;
+  }
+
+  .profile label {
+    margin-left: 5px;
+    font-size: 18px;
+    padding-bottom: 10px;
+    margin-bottom: 10px;
+  }
+  
+  .profile input[type="text"] {
+    width: 100%;
+    padding: 10px 0px;
+    margin-bottom: 20px;
+    border: solid 2px;
+    border-color: #7070709f;
+    border-radius: 10px;
+    box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.3);
+    font-size: 16px;
+  }
+  
+  .profile button {
+    width: 100px;
+    padding: 10px 20px;
+    background-color: #2f2f2f;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 18px;
+    transition: all 0.3s ease;
+  }
+  
+  .CancelButton{
+    margin-right: 100px;
+  }
+
+  .profile button:hover {
+    background-color: #c1c1c1;
+  }
+  .CancelButton:hover{
+    background-color: #d20101;
+  }
+  
+  .profile p {
+    font-size: 16px;
+    margin-bottom: 10px;
+  }
+  
+  .profile .edit-mode input[type="text"],
+  .profile .edit-mode button {
+    display: inline-block;
+  }
+  
+  .profile .edit-mode p {
+    display: none;
+  }
+  
+  .profile .edit-mode label {
+    margin-top: 10px;
+  }
+  
+  .profile .edit-mode button {
+    margin-top: 10px;
+  }
+  .showProfile{
+    display: flex;
+    flex-direction: column;
+    width: 80%;
+    max-width: 300px;
+    margin:auto;
+  }
+  .showProfile p{
+    font-size: 18px;
+    margin-top: 0px;
+    margin-bottom: 15px;
+  }
+  
