--- a/web-react/src/Front-end/MyNavFront.css
+++ b/web-react/src/Front-end/MyNavFront.css
@@ -6,3 +6,65 @@
 .css-19r6kue-MuiContainer-root {
     color: rgb(0, 0, 0);
 }
+
+.select .MuiOutlinedInput-notchedOutline {
+    border: none;
+}
+.select .MuiOutlinedInput-root:hover .MuiOutlinedInput-notchedOutline {
+    border: none;
+}
+.select .MuiOutlinedInput-root.Mui-focused .MuiOutlinedInput-notchedOutline {
+    border: none;
+}
+.select .MuiOutlinedInput-root {
+    border: none;
+}
+.select .MuiSvgIcon-root {
+    display: none;
+}
+
+.help-login{
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    background-color: #b8ad93;
+}
+.help-login.nav {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    padding: 10px;
+    margin-right: 50px;
+}
+
+.help-login.select {
+    margin-left: 10px;
+    font-size: 16px;
+    font-weight: bold;
+    outline: none;
+}
+
+.help-login.select:hover {
+    cursor: pointer;
+}
+
+.help-login.a {
+    color: #333;
+    text-decoration: none;
+}
+
+.help-login.a:hover {
+    text-decoration: underline;
+}
+
+a:-webkit-any-link {
+    color: black;
+    cursor: pointer;
+    text-decoration: none;
+}
+
+
+
+  
+  
+  
