--- a/web-react/src/Front-end/MyNavFront.css
+++ b/web-react/src/Front-end/MyNavFront.css
@@ -63,8 +63,110 @@ a:-webkit-any-link {
     text-decoration: none;
 }
 
+/* ======================================== cart ======================================== */
+
+.cartbox{
+    margin-top: 50px;
+    width: 100%;
+    height: 100%;
+}
+
+.cart-item {
+    display: flex;
+    align-items: center;
+    padding: 10px;
+    border-bottom: 1px solid #ccc;
+  }
+  
+  .cart-item-checkbox {
+    flex-basis: 5%;
+  }
+  
+  .cart-item-image img {
+    max-width: 150px;
+    max-height: 150px;
+    width: 100%;
+    height: 100%;
+  }
+  
+  
+  .cart-item-details {
+    flex-basis: 50%;
+  }
+  
+  .cart-item-details p {
+    max-width: 400px;
+    margin: 0;
+    margin-left: 20px;
+  }
+  
+  .cart-item-details .name {
+    font-weight: bold;
+  }
+  
+  .cart-item-details .bin {
+    color: red;
+    margin-top: 10px;
+  }
+  
+  .cart-item-price {
+    flex-basis: 25%;
+    text-align: center;
+  }
+  
+  .cart-item-price p {
+    font-weight: bold;
+  }
+  
+
+.css-1f7m58l{
+    padding: 40px;
+    margin: 0px;
+    width: 100%;
+    height: 100%;
+}
+.cartbox .css-1f7m58l{
+    padding: 40px;
+    margin: 40px 0px 0px;
+    width: 100%;
+    height: 100%;
+}
+
+.paymentbox {
+    padding: 16px;
+    border: none;
+    text-align: left;
+    padding: 40px;
+    margin: auto;
+    width: 100%;
+    max-width: 400px;
+    min-width: 400px;
+    }
 
 
-  
-  
-  
+.paymentbox input[type="text"] {
+    font-size: 16px;
+    padding: 12px;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    margin: auto;
+    width: 100%;
+    }
+
+.paymentbox label {
+    margin-bottom: 8px;
+    }
+.logobin{
+    max-width: 22px;
+    width: 100%;
+    height: 100%;
+    margin-top: 10px;
+    margin-left: 20px;
+    }
+
+.cardNumber{
+    width: 400px;
+}
+.css-9ddj71-MuiInputBase-root-MuiOutlinedInput-root{
+    margin: 5px;
+}
