--- a/web-react/src/Front-end/MyNavFront.css
+++ b/web-react/src/Front-end/MyNavFront.css
@@ -136,36 +136,50 @@ a:-webkit-any-link {
     padding: 16px;
     border: none;
     text-align: left;
-    padding: 40px;
-    margin: auto;
+    padding: 0px;
+    margin: 20px 10px;
     width: 100%;
     max-width: 400px;
     min-width: 400px;
     }
-
+.PaymentChoice{
+    align-items: center;
+    justify-content: space-between;
+    max-width: 240px;
+}
+.ShippingChoice {
+    align-items: center;
+    justify-content: space-between;
+    max-width: 300px;
+  }
 
 .paymentbox input[type="text"] {
     font-size: 16px;
-    padding: 12px;
+    padding: 10px;
     border: 1px solid #ddd;
     border-radius: 4px;
-    margin: auto;
+    margin: 0px;
     width: 100%;
     }
 
-.paymentbox label {
-    margin-bottom: 8px;
+.cart-item-details button{
+    margin: 0px;
+    padding: 0px;
+    width: 0px;
     }
 .logobin{
+    text-align: left;
     max-width: 22px;
-    width: 100%;
     height: 100%;
-    margin-top: 10px;
-    margin-left: 20px;
+    margin: 10px 10px;
+
     }
 
 .cardNumber{
     width: 400px;
+}
+.css-1u3bzj6-MuiFormControl-root-MuiTextField-root{
+    margin: 5px 0px;
 }
 .css-9ddj71-MuiInputBase-root-MuiOutlinedInput-root{
     margin: 5px;
