--- a/web-react/src/Front-end/Help/Help.css
+++ b/web-react/src/Front-end/Help/Help.css
@@ -69,7 +69,7 @@ form {
 }
 
 
-button {
+.OrderStatus button {
   margin-top: 30px;
   width: 200px;
   background-color: black;
@@ -80,7 +80,7 @@ button {
   cursor: pointer;
 }
 
-button:hover {
+.OrderStatus button:hover {
   background-color: #555;
   color: white;
 }
