--- a/web-react/src/Front-end/Help/Help.css
+++ b/web-react/src/Front-end/Help/Help.css
@@ -85,9 +85,40 @@ form {
   color: white;
 }
 
+.OrderStatus_search{
+  max-width: 1500px;
+  text-align: center;
+  margin: auto;
+}
+.OrderStatus_search h1{
+  font-size: 2.5rem;
+  margin-top: 50px;
+}
 
+.OrderStatus_search p{
+  margin: 10px auto;
+  font-size: 1.1rem;
+}
+.box_orderStatus_search{
+  max-width: 300px;
+  margin: auto;
+  text-align: left;
+}
+.box_status{
+  margin-top: 40px;
+}
 
-
+.icon_status{
+  width: 100%;
+  max-width: 80px;
+  margin: 10px;
+}
+.icon_status_none{
+  filter: brightness(40%);
+  width: 100%;
+  max-width: 80px;
+  margin: 10px;
+}
 
 
 @media screen and (max-width: 700px) {
